# py-scripts

./: .bashrc  .emacs  .gitignore  .gitmodules  arg_parser.py  check_all.clang-tidy  ln.py  makefile  scbui.py  static_ip.py  ttyusb.py  zshrc_arch  zshrc_debian
cmake/: CMakeLists.txt  CMakeLists_raspberry.txt  CMakeLists_raspberry_iwyu.txt  CMakeLists_stm.txt  arm-linux-gnueabihf.cmake  arm-none-eabi-toolchain.cmake  gcc_mystm.cmake
cmake/Modules/: FindDL_arm_linux_gnueabihf.cmake  FindThreads_arm_linux_gnueabihf.cmake
emacs/: .dir-locals.el  .emacs  FindDL.cmake  clangformatsetup.el  companysetup.el  companyternsetup.el  customvarsetup.el  dir-locals-g++armlinuxhf.el  evilmultieditsetup.el  flychecksetup.el  gdbsetup.el  helmsetup.el  hints.org  indentguidesetup.el  install.el  ispellsetup.el  magitsetup.el  mymodehooks.el  rdm.service  reftexsetup.el  rtagssetup.el  smartparenssetup.el  sphinxsetup.el  spotifysetup.el  style.el  sudoeditsetup.el  ternsetup.el  texsitesetup.el  typescriptsetup.el  webmodesetup.el  yassetup.el  zealsetup.el
emacs/dir_locals/: dir-locals.el
emacs/setup/: anzusetup.el  arduino-mode-setup.el  avysetup.el  cargosetup.el  companysetup.el  companyternsetup.el  dmodesetup.el  elispformatsetup.el  evilsetup.el  evilsmartparenssetup.el  fcimodesetup.el  fillcolumnsetup.el  flycheckrustsetup.el  flyspellsetup.el  indentguidesetup.el  init.el  install.el  ispellsetup.el  js2-mode-setup.el  jsdocsetup.el  markdownsetup.el  moderncppsetup.el  mymodehooks.el  octavesetup.el  orgsetup.el  pdftoolssetup.el  racersetup.el  (+13 more)
vscode/: settings.json
(+17 files in other folders)
